# 51Talk-Referral

./: .claudeignore  .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  M4_PHASE2_COMPLETION.md  README.md  app.py  docker-compose.yml  dump_ops.py  generate_report.command  pyproject.toml  referral-review-20260219.md  referral-review-exec-20260219.md  referral-review-ops-20260219.md  requirements.txt  start.py  start.sh  start_planning.sh  terminal_start.py  test_f1.py  test_loaders.py  test_ops.py  test_parquet.py  一键启动.command  下载BI数据.command  启动.command  🚀 启动面板.command
.agents/: mk-template.md  pm-pipeline.md  report-scorer.md  report-writer.md
.claude/: launch.json  see-manifest.json  settings.json
.husky/: pre-commit
.see-graph/: graph.db
backend/: .flake8  Dockerfile  check.py  main.py  mcp_bridge.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: access-control.json  priority_rules.json  quickbi_notify.json  quickbi_source.json  targets_override.json  theme.json
docs/: bi-indicator-dictionary.md  bonus_rules.md  business-bible.en.md  business-bible.md  business-bible.th.md  cc-ranking-spec.md  component-registry.md  context-map.md  dashboard-specs.md  data-source-dependencies.md  data-source-update-policy.md  field-coverage-audit.md  frontend-architecture.md  glossary.md  m33-spec.md  m33-target-tiers-spec.md  member-profile-spec.md  methodology.md  milestone-archive.md  roadmap.md  tech-audit-profile.md  tech-debt-archive.md  活动方案-变更新增-202604.md
frontend/: .eslintrc.json  Dockerfile  (+7 more)
(+1418 files in other folders)
